Added Schema & Models

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
 PORT=4000
+MONGO_URI=mongodb+srv://anadaren:sMXlAWyIilpf9EMH@workoutapp.c1rqs.mongodb.net/?retryWrites=true&w=majority&appName=workoutapp
